# JEngine-Reformed

./: .clang-format  .clang-tidy  .clangd  .codespellrc  .gitignore  Application_8hpp.html  Assert_8hpp.html  BUILDING_8md.html  Base_8hpp.html  CMakeLists.txt  CMakePresets.json  CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  Events_8hpp.html  HACKING.md  HACKING_8md.html  IRenderTarget_8hpp.html  IRendererAPI_8cpp.html  IRendererAPI_8hpp.html  LSAN.supp  Logger_8hpp.html  Memory_8hpp.html  OpenGLRendererAPI_8cpp.html  OpenGLRendererAPI_8hpp.html  Platform_8cpp.html  Platform_8hpp.html  README.md  README_8md.html  Renderer_8cpp.html  Renderer_8hpp.html  SDLPlatform_8hpp.html  TODO.md  Types_8hpp.html  about.html  about_8dox.html  annotated.html  classJE_1_1App.html  classJE_1_1AttributeLayout.html  classJE_1_1EventDispatcher.html  classJE_1_1IEvent.html  (+64 more)
.github/: clang-13.profile  clang-14.profile  clang-15.profile  clang-16.profile  clang-17.profile  clang-cl.profile  clang-mac.profile  clang.profile  gcc-12.profile  gcc-mac.profile  gcc.profile  msvc.profile
.github/actions/setup_cache/: action.yml
.github/actions/setup_tools_shared/: action.yml
.github/workflows/: ci.yml
cmake/: CatchAddTests.cmake  DownloadCPM.cmake  SystemLink.cmake  custom-options.cmake  dev-mode.cmake  docs-ci.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  spell.cmake  variables.cmake
docs/: Doxyfile.in
markdown/: BUILDING.md  HACKING.md  TODO.md
misc/: LSAN.supp
source/: Application.hpp  Assert.hpp  Base.hpp  Events.hpp  JEngine-Reformed_exe.cmake  JEngine-Reformed_lib.cmake  Logger.hpp  Memory.hpp  Platform.cpp  Platform.hpp  SDLPlatform.hpp  Types.hpp  lib.cpp  lib.hpp  main.cpp
source/Graphics/: IRenderTarget.hpp  IRendererAPI.cpp  IRendererAPI.hpp  IVertexArray.hpp  Mesh.hpp  OpenGLRenderer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLVertexArray.hpp  Renderer.cpp  Renderer.hpp
source/SDL/: SDLPlatform.hpp
source/Sound/: ImpulseAudio.cpp
src/: Application.hpp  Assert.hpp  Base.hpp  Events.hpp  Input.hpp  JEngine-Reformed_exe.cmake  JEngine-Reformed_lib.cmake  Logger.hpp  Memory.hpp  Platform.cpp  Platform.hpp  Types.hpp  main.cpp
src/Graphics/: IRendererAPI.cpp  IRendererAPI.hpp  OpenGLRenderer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  Renderer.cpp  Renderer.hpp
src/SDL/: SDLPlatform.hpp
src/Sound/: AudioBuffer.hpp  ImpulseAudio.cpp  ImpulseAudio.hpp
test/: CMakeLists.txt
test/source/: JEngine-Reformed_constexpr_test.cpp  JEngine-Reformed_test.cpp  JEngine3D_test.cpp
test/src/: JEngine-Reformed_constexpr_test.cpp  JEngine-Reformed_test.cpp
